--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -14,13 +14,13 @@
 	</script>
 	<link href="https://fonts.googleapis.com/css?family=Proxima-Nova" rel="stylesheet">
 	<link href="https://bootswatch.com/spacelab/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="app/public/css/style.css" rel="stylesheet">
+	<link href="../public/css/style.css" rel="stylesheet">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js">
-	<link rel="apple-touch-icon" sizes="180x180" href="app/public/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="app/public/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="app/public/icons/favicon-16x16.png">
-    <link rel="manifest" href="app/public/icons/manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="../public/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../public/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../public/icons/favicon-16x16.png">
+    <link rel="manifest" href="../public/icons/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5 ">
     <meta name="theme-color" content="#ffffff ">
 
@@ -32,7 +32,7 @@
 
 	<div class="row" id="main-header">
 		<div class="col-md-2" id="logo-image">
-			<img src="app/public/images/WineLogo.png" alt="VV Logo" style="width:210px; height: 85px; margin-top: 10px">
+			<img src="../public/images/WineLogo.png" alt="VV Logo" style="width:210px; height: 85px; margin-top: 10px">
 			<br>
 			<br>
 			<br>
@@ -68,7 +68,7 @@
 			        		</div> <!--end col for text-->
 
 			        		<div class="col-md-5">
-			        			<img src="app/public/images/sunset.jpg" alt="Sonoma Sunset" style="width:500px; height: 270px; margin-top: 10px">
+			        			<img src="../public/images/sunset.jpg" alt="Sonoma Sunset" style="width:500px; height: 270px; margin-top: 10px">
 			        		</div> <!--close col 5 for image -->
 			      		</div> <!--close row-->
 					</div>  <!-- end of slide one div -->
@@ -92,7 +92,7 @@
 			       			</div> <!-- end div for col 7 -->
 
 			       			<div class="col-md-5">
-			        			<img src="app/public/images/winebarrels.jpg" alt="Red Wine" style="width:500px; height: 270px; margin-top: 10px">
+			        			<img src="../public/images/winebarrels.jpg" alt="Red Wine" style="width:500px; height: 270px; margin-top: 10px">
 			       			</div> <!--close col 5 for image -->
 			      		</div> <!--close row-->
 					</div>
@@ -115,7 +115,7 @@
 			       			</div> <!-- end div for col 7 -->
 
 			       			<div class="col-md-5">
-			        			<img src="app/public/images/beerimage.jpg" alt="Beer" style="width:500px; height: 270px; margin-top: 10px">
+			        			<img src="../public/images/beerimage.jpg" alt="Beer" style="width:500px; height: 270px; margin-top: 10px">
 			       			</div> <!--close col 5 for image -->
 			      		</div> <!--close row-->
 					</div>
@@ -183,7 +183,7 @@
 					<div class="col-sm-1 col-md-1 col-lg-1">
 					</div>
 					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-frontpage" src="app/public/images/newwineglass.jpg" alt="Wine Glass"></p>
+						<p><img class="img-frontpage" src="../public/images/newwineglass.jpg" alt="Wine Glass"></p>
 					</div>
 				</div>
 			</div>
@@ -206,7 +206,7 @@
 					<div class="col-sm-1 col-md-1 col-lg-1">
 					</div>
 					<div class="col-sm-5 col-md-5 col-lg-5">
-						<p><img class="img-frontpage" src="app/public/images/winetop.jpg" alt="Screenshot of alcohol database"></p>
+						<p><img class="img-frontpage" src="../public/images/winetop.jpg" alt="Screenshot of alcohol database"></p>
 					</div>
 				</div>
 			</div>
@@ -275,7 +275,7 @@
 	<div class="container footer">
 		<div class="row">
 			<div class="col-sm-4 col-md-4 col-lg-4" id="footerlogo">
-				<p><img class="img-responsive" src="app/public/images/WhiteVNoBackground.png" alt="OurLogo"></p>
+				<p><img class="img-responsive" src="../public/images/WhiteVNoBackground.png" alt="OurLogo"></p>
 				<p>Vinum Vitae</p>
 			</div>
 
