--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -216,6 +216,11 @@ h4 {
 	margin-left: 85px;
 }
 
+.row-small-hide{
+  margin-right: 85px;
+  margin-left: 85px;
+}
+
 .space {
 	padding-top: 35px;
 	padding-bottom: 35px;
@@ -301,12 +306,13 @@ h4 {
   width: 100%;
 }
 #footerlogo {
-  height: 75px;
-  width: 75px;
+  height: 100px;
+  width: 85px;
   padding: 15px;
   align-items: center;
+  text-align: center;
 }
-.copyright {
+#copyright {
   border-right: ridge 3px #e4e4e4;
 
 }
