--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -44,7 +44,8 @@ text-align: center;
   text-align: center;
 }
 
-#sign-in-button {
+#sign-in-button
+{
   display: inline-block;
   text-align: center;
   border: 1px solid black;
@@ -56,6 +57,26 @@ text-align: center;
   background-color: #68838B;
   cursor: auto;
   box-sizing: border-box;
+  border-radius: 10px;
+  width: 185px;
+  height: 70px;
+}
+
+#clear-posts {
+  color: #303030;
+  background-color: #68838B;
+   border-radius: 10px;
+}
+
+#post-div {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+#rcorners1 {
+    border-radius: 25px;
+    background: #73AD21;
+    padding: 20px; 
+    width: 200px;
+    height: 150px; 
 }
 
 .shadow, shadow:before, shadow:after {
@@ -135,6 +156,10 @@ text-align: center;
 }
 
 #border {
+  border-left: ridge 2px #A9A9A9;
+}
+
+#select-posts {
   border-left: ridge 2px #A9A9A9;
 }
 
@@ -301,6 +326,26 @@ h4 {
   left: 0;
 }
 
+#stylebox {
+  background: #1a1a1a;
+  border: black;
+  height: 105px;
+  opacity: 1.0;
+  filter: alpha (opacity=100);
+  padding-bottom: 10px;
+}
+
+#stylebox:hover {
+  opacity: 0.5;
+  filter: alpha (opacity=50);
+}
+#signininspiration {
+  font-size: 16px;
+  color:white;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
 .img-frontpage {
   height: 50%;
   width: 100%;
@@ -308,15 +353,23 @@ h4 {
 #footerlogo {
   height: 100px;
   width: 85px;
-  padding: 15px;
-  align-items: center;
+  text-align: left;
+  padding-left: 20px;
+}
+
+#ourapp {
+  font-size: 24px;
   text-align: center;
+  font-style: italic;
+  letter-spacing: 3px;
+  padding-top: 10px;
 }
 #copyright {
   border-right: ridge 3px #e4e4e4;
-
 }
-
+ #wineForm {
+    background-color: #262626;
+ }
 
 
 
