--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -326,6 +326,30 @@ h4 {
   left: 0;
 }
 
+.tooManyMessage {
+  background-color: #262626;
+  border: 1px solid white;
+  font-size: 24px;
+  text-align: center;
+  color: white;
+  margin-bottom: 10px;
+  margin-bottom: 10px;
+  height: 80px;
+
+}
+
+.noResults {
+  background-color: #262626;
+  border: 1px solid white;
+  font-size: 24px;
+  text-align: center;
+  color: white;
+  margin-bottom: 10px;
+  margin-bottom: 10px;
+  height: 80px;
+
+}
+
 #stylebox {
   background: #1a1a1a;
   border: black;
