server actually launches, just have to make sequelize start grabbing things

--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -36,7 +36,7 @@
 			<br>
 			<br>
 			<br>
-			<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</a></button>
+			<a href="/signUp"><button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</a></button>
 		</div>  <!-- close static col for header -->
 		
 		<div class="col-md-10">
