--- a/app/views/wineBasicSearch.handlebars
+++ b/app/views/wineBasicSearch.handlebars
@@ -131,7 +131,7 @@
         <button type="submit" class="btn btn-default">Devour it!</button>
     </form>
 
-<script type="text/javascript" src="searchwinefunction.js"></script>
+<script type="text/javascript" src="js/searchwinefunction.js"></script>
 </body>
 </html>
 
