--- a/app/views/signUp.handlebars
+++ b/app/views/signUp.handlebars
@@ -29,15 +29,12 @@
 
 <div id=form>
 <h3>Create an Account</h3>
-  <form method="POST" action="/new">
+  <form method="POST" action="/users/new">
     <label for="uname">Username</label>
     <input type="text" id="uname" name="username" placeholder="Enter Your Username" required>
 
     <label for="pwd">Password</label>
-    <input type="password" id="pwd" name="pwd" placeholder="Enter Your Password" required>
-
-     <label for="pwd">Confirm Password</label>
-    <input type="password" id="pwd" name="psw-repeat" placeholder="Confirm Your Password" required>
+    <input type="password" id="pwd" name="password" placeholder="Enter Your Password" required>
   
     <input type="submit" value="Submit">
 
@@ -48,15 +45,15 @@
 
 <div id=form>
 <h3>Login</h3>
-  <form action="/login">
+  <form action="/users/login">
     <label for="uname">Username</label>
-    <input type="text" id="uname" name="username" placeholder="Enter Your Username" required>
+    <input type="text" id="uname" name="uname" placeholder="Enter Your Username" required>
 
     <label for="pwd">Password</label>
     <input type="password" id="pwd" name="pwd" placeholder="Enter Your Password" required>
 
    
-    <input type="submit" value="Login">
+    <input type="submit" value="submit">
   </form>
 </div>
 </div>
