--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -19,6 +19,18 @@
 	padding-left: 10px;
 }
 
+a {
+  color: black;
+}
+
+a: visited {
+  color: white;
+}
+
+a: active {
+  color: black;
+}
+
 #main-header{
   border-bottom: solid 2px #A9A9A9;
    background: url("../images/texturebackground.jpg") no-repeat center fixed;
@@ -68,9 +80,13 @@ text-align: center;
    border-radius: 10px;
 }
 
+
 #post-div {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  font-size: 15px;
+  color: #262626 ;
 }
+
 #rcorners1 {
     border-radius: 25px;
     background: #73AD21;
@@ -379,23 +395,23 @@ h4 {
 }
 
 #stylebox {
-  background: #1a1a1a;
+  background: #262626;
   border: black;
-  height: 105px;
-  opacity: 1.0;
-  filter: alpha (opacity=100);
+  height: 115px;
   padding-bottom: 10px;
+  border-radius: 2%;
 }
 
-#stylebox:hover {
+/*#stylebox:hover {
   opacity: 0.5;
   filter: alpha (opacity=50);
-}
+}*/
 #signininspiration {
-  font-size: 16px;
+  font-size: 18px;
   color:white;
   letter-spacing: 2px;
   text-align: center;
+
 }
 
 #user-db 
