Time to celebrate, the app works

--- a/app/views/index.handlebars
+++ b/app/views/index.handlebars
@@ -176,7 +176,8 @@
 						<div class = "row">
 							<div class="col-sm-3 col-md-3 col-lg-3"></div>
 							<div class="col-sm-6 col-md-6 col-lg-6">
-								<button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</a></button></div>
+								<a href="/search"><button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Sign in!</button></a>
+								</div>
 							<div class="col-sm-3 col-md-3 col-lg-3"></div>
 						</div>
 					</div>
