--- a/app/views/wineBasicSearch.handlebars
+++ b/app/views/wineBasicSearch.handlebars
@@ -30,7 +30,7 @@
         <div class="col-md-3">
         </div>
          <div class="col-md-4" id="button-down">
-            <button type="button" id="sign-in-button"><a><span class ="glyphicon glyphicon"></span>Sign in!</a></button>
+            <a href="/"><button type="button" id="sign-in-button"><span class ="glyphicon glyphicon"></span>Log Out!</button></a>
         </div>
     </div> <!--close main header -->
         <div class="row">
@@ -136,7 +136,7 @@
                     <div class="col-sm-5 col-md-5 col-lg-5">
                         <div class="userdb">
                             <div class="container-1">
-                                <button id= "user-db" class="btn btn-custom"><p>My Personal Wine Cellar</button>
+                                </a><button id= "user-db" class="btn btn-custom"><p>My Personal Wine Cellar</button>
                             </div>
                         </div>
                         <br>
@@ -149,14 +149,14 @@
         </div> <!--close row small -->
 
 
-    <div class="row-small-hide">
+    <div class="row-small">
         <div class="col-sm-12">
             <br>
             <div class="card card-body">
                 <div class="panel-heading" id="panelchange">
                     <h4 class="panel-title" style="font-size: 20px">Your Wine Cellar</h4>
                 </div>
-                <div class="panel-body" id="user-div"></div>
+                <div class="panel-body" id="wine-cellar"></div>
                 
             </div>
         </div>
@@ -208,6 +208,7 @@
         <input input type="hidden" type="text" name="wine_vintage" value="" id="wine-vintage">
         <input input type="hidden" type="text" name="wine_winery" value="" id="wine-winery">
         <input input type="hidden" type="text" name="wine_wineryID" value="" id="wine-wineryID">
+        <input input type="hidden" type="text" name="wine_image" value="" id="wine-image">
         
         
         <button type="submit" class="btn btn-default">Wine It</button>
