--- a/app/public/css/lstyle.css
+++ b/app/public/css/lstyle.css
@@ -10,11 +10,35 @@ h3 {
   font-size: 125%;
   font-weight: bold;
 }
+
+.navbar {
+  padding: 10px 0;
+  background-image: url("../images/texturebackground.jpg");
+}
 .navpic {
   float: left;
-  width: 15%;
+  width: 40%;
   display: block;
-  margin: auto;
+}
+.button {
+  display: inline-block;
+  text-align: center;
+  border: 1px solid black;
+  font-weight: 600;
+  padding: 2rem 3rem;
+  text-transform: uppercase;
+  color: #303030;
+  font-size: 24px;
+  background-color: #68838b;
+  cursor: auto;
+  box-sizing: border-box;
+  border-radius: 10px;
+  width: 185px;
+  height: 70px;
+}
+
+.button {
+  float: right;
 }
 
 input[type=text],
@@ -41,7 +65,7 @@ select {
 
 input[type=submit] {
   width: 100%;
-  background-color: #68838B;
+  background-color: #68838b;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -53,8 +77,6 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #3a5764;
 }
-
-
 
 #form {
   border-radius: 25px;
@@ -88,7 +110,7 @@ a:active {
 
 .top-nav a {
   margin-right: 10px;
-  color: #68838B;
+  color: #68838b;
 }
 
 .top-nav a:hover {
@@ -123,7 +145,7 @@ a:active {
 
 .footer {
   background-color: #262626;
-  border-top: solid 2px #A9A9A9;
+  border-top: solid 2px #a9a9a9;
   color: #fff;
   text-align: center;
   -webkit-background-size: cover;
@@ -132,7 +154,7 @@ a:active {
   background-size: cover;
   min-height: 100%;
   width: 100%;
-  height: 100%;  
+  height: 100%;
   top: 0;
   left: 0;
 }
@@ -149,6 +171,4 @@ a:active {
 }
 .copyright {
   border-right: ridge 3px #e4e4e4;
-
 }
-
